--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -21,14 +21,32 @@
     0% {
       transform: rotate(-45deg);
     }
-    25% {
-      transform: rotate(-15deg);
+    10% {
+      transform: rotate(-30deg);
+    }
+    20% {
+        transform: rotate(-15deg);
+    }
+    30% {
+        transform: rotate(0deg);
+    }
+    40% {
+        transform: rotate(15deg);
     }
     50% {
-        transform: rotate(-0deg);
+      transform: rotate(30deg);
     }
-    75% {
-        transform: rotate(15deg);
+    60% {
+      transform: rotate(15deg);
+    }
+    70% {
+        transform: rotate(0deg);
+    }
+    80% {
+        transform: rotate(-15deg);
+    }
+    90% {
+        transform: rotate(-30deg);
     }
     100% {
         transform: rotate(-45deg);
